--- a/CTRLKEY_API/appsettings.json
+++ b/CTRLKEY_API/appsettings.json
@@ -1,4 +1,19 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1;Port=3306;Database=CTRLKEY_DB;Uid=root;Pwd=1111;"
+  },
+  "EmailSettings": {
+    "SmtpUsername": "ctrlkeyproject@gmail.com",
+    "SmtpPassword": "qktjdreepyydgapj",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587,
+    "UseSSL": true
+  },
+  "JwtSettings": {
+    "SecretKey": "ThisIsASecureSecretKey1234567890",
+    "Issuer": "CTRLKEY_API",
+    "Audience": "CTRLKEY_Client"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
